# personal-infra

./: .envrc  .gitignore  LICENSE  README.md  domain.tf  flake.nix  ingress_controller.tf  justfile  main.tf  node_external_ip.sh  object_storage.tf  output.tf  variables.tf
blog/: Cargo.toml  build.rs  justfile
blog/src/: main.rs
cert-manager/: Cargo.toml  build.rs  justfile
cnpg-database/: Cargo.toml  build.rs  justfile
cnpg-operator/: build.rs  justfile
csi-driver-linode/: Cargo.toml  build.rs  justfile
envoy-gateway/: Cargo.toml  build.rs  justfile
external-dns/: build.rs  justfile
grafana/: Cargo.toml  justfile
helm/: Cargo.toml
ingress-nginx/: Cargo.toml  build.rs  justfile
k8s-deployments/: Cargo.toml  check.sh  sealed_secrets.yaml  shared_yoke.just  values.json
k8s-deployments/blog/: Cargo.toml  build.rs  justfile  secrets-template.yaml
k8s-deployments/blog/src/: main.rs
k8s-deployments/cert-manager/: build.rs  justfile
k8s-deployments/cert-manager/src/: main.rs
k8s-deployments/cnpg-database/: Cargo.toml  build.rs  justfile  secrets-template.yaml
k8s-deployments/cnpg-database/src/: main.rs
k8s-deployments/cnpg-database/src/cnpg/: database.rs  object_store.rs  scheduled_backups.rs
k8s-deployments/cnpg-operator/: Cargo.toml  build.rs  justfile
k8s-deployments/csi-driver-linode/: Cargo.toml  build.rs  justfile  secrets-template.yaml
k8s-deployments/csi-driver-linode/src/: main.rs
k8s-deployments/envoy-gateway/: build.rs  justfile
k8s-deployments/envoy-gateway/src/: main.rs
k8s-deployments/envoy-gateway/src/envoy/: envoy_proxy.rs  mod.rs
k8s-deployments/external-dns/: Cargo.toml  build.rs  justfile  secrets-template.yaml
k8s-deployments/external-dns/src/: main.rs
k8s-deployments/grafana/: Cargo.toml  justfile
k8s-deployments/grafana/src/: main.rs
k8s-deployments/helm/: Cargo.toml
k8s-deployments/helm/src/: lib.rs
k8s-deployments/k8s-gateway-api/: Cargo.toml
k8s-deployments/k8s-gateway-api/src/: gateway.rs  http_route.rs  lib.rs  listener_set.rs
k8s-deployments/kavita/: Cargo.toml  justfile
k8s-deployments/kavita/src/: main.rs
k8s-deployments/kube-state-metrics/: justfile
k8s-deployments/kube_builder/: Cargo.toml
k8s-deployments/kube_builder/src/: container.rs  deployment.rs  http_route.rs  ingress.rs  lib.rs  listener_set.rs  sealed_secrets.rs  secret.rs  service.rs  tailscale.rs
k8s-deployments/metrics-server/: Cargo.toml  build.rs  justfile
k8s-deployments/miniflux/: Cargo.toml  build.rs  justfile  secrets-template.yaml
k8s-deployments/miniflux/src/: main.rs
k8s-deployments/monitoring-crds/: Cargo.toml
k8s-deployments/monitoring-crds/src/: lib.rs  pod_monitor.rs
k8s-deployments/registry/: Cargo.toml  build.rs  justfile  secrets-template.yaml
k8s-deployments/registry/src/: main.rs
k8s-deployments/rmfakecloud/: justfile
k8s-deployments/rmfakecloud/src/: main.rs
k8s-deployments/sealed-secrets/: Cargo.toml  build.rs  justfile
k8s-deployments/sealed-secrets-crd/: Cargo.toml
k8s-deployments/sealed-secrets-crd/src/: lib.rs  sealed_secrets.rs
k8s-deployments/secrets/src/: lib.rs
k8s-deployments/sops-seal/: Cargo.toml
k8s-deployments/sops-seal/examples/: cnpg-database.yaml
k8s-deployments/sops-seal/src/: input.rs  main.rs  path_transform.rs  seal.rs  sops.rs
k8s-deployments/storage-classes-linode/: Cargo.toml  justfile
k8s-deployments/storage-classes-linode/src/: main.rs
k8s-deployments/tailscale/: Cargo.toml  build.rs  justfile
k8s-deployments/tailscale/src/: main.rs
k8s-deployments/tailscale/src/tailscale/: mod.rs  proxy_class.rs
k8s-deployments/umami/: Cargo.toml  justfile  secrets-template.yaml
k8s-deployments/umami/src/: main.rs
k8s-deployments/velero/: build.rs  justfile
k8s-deployments/velero/src/: main.rs
k8s-deployments/victoria-metrics/: Cargo.toml  justfile
k8s-deployments/victoria-metrics-operator/: build.rs  justfile
k8s-deployments/victoria-metrics-operator/src/: main.rs
k8s-deployments/victoria-metrics/src/: main.rs
k8s-deployments/victoria-metrics/src/vm/: vm_agent.rs  vm_node_scrape.rs  vm_service_scrape.rs
k8s-deployments/vikunja/: Cargo.toml  justfile  secrets-template.yaml
k8s-deployments/vikunja/src/: main.rs
k8s-deployments/wallabag/: Cargo.toml  build.rs  justfile  secrets-template.yaml
k8s-deployments/wallabag/src/: main.rs
kavita/: Cargo.toml  justfile
kube-state-metrics/: Cargo.toml  justfile
kube_builder/: Cargo.toml
manifests/: blog.yaml  create-image-pull-secret  letsencrypt_issuer.yaml
metrics-server/: build.rs  justfile
miniflux/: Cargo.toml  build.rs  justfile
registry/: Cargo.toml  build.rs  justfile
rmfakecloud/: Cargo.toml  justfile
secrets/: Cargo.toml
tailscale/: build.rs  justfile
templates/yoke-deployment/: Cargo.toml  build.rs  cargo-generate.toml  justfile
templates/yoke-deployment/src/: main.rs
templates/yoke-helm-deployment/: Cargo.toml  build.rs  cargo-generate.toml  justfile
(+107 files in other folders)
