[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
kube-builder = { path = "../kube_builder" }
base64 = "0.22.1"
k8s-gateway-api = { path = "../k8s-gateway-api" }

[build-dependencies]
secrets = { path = "../secrets" }
