[workspace]
members = [
    "blog",
    "cert-manager",
    "cnpg-database",
    "cnpg-operator",
    "csi-driver-linode",
    "envoy-gateway",
    "external-dns",
    "grafana",
    "helm",
    "k8s-gateway-api",
    "kavita",
    "kube-state-metrics",
    "kube_builder",
    "metrics-server",
    "miniflux",
    "monitoring-crds",
    "registry",
    "rmfakecloud",
    "sealed-secrets", "sealed-secrets-crd",
    "secrets", "sops-seal",
    "tailscale",
    "velero",
    "victoria-metrics",
    "victoria-metrics-operator",
    "vikunja",
    "wallabag",
]
resolver = "3"
