[package]
name = "grafana"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
kube-builder = { path = "../kube_builder" }
schemars = "1.1.0"
kube = { version = "2.0.1", default-features = false, features = ["derive"] }
k8s-gateway-api = { path = "../k8s-gateway-api" }
