[package]
name = "kube-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
k8s-gateway-api = { path = "../k8s-gateway-api" }
sealed-secrets-crd = { path = "../sealed-secrets-crd" }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
