[package]
name = "monitoring-crds"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
