[package]
name = "sops-seal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
sealed-secrets-crd = { path = "../sealed-secrets-crd" }
secrets = { path = "../secrets" }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
serde_norway = "0.9.42"
